fix spacing

--- a/ep-4/index.css
+++ b/ep-4/index.css
@@ -98,20 +98,29 @@
 
 .restaurant-card{
     margin: 15px;
-    height: 300px;
-    padding:5px;
-    border-radius: 10px;
+    height: 310px;
+    padding:7px 5px;
+    border-radius: 15px;
     cursor: pointer;
     width: 280px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    position: relative;
 }
 
 .restaurant-card-image{
     border-radius: 15px;
     margin-left: 2px;
     width: 99%;
-    height: 60%;
+    height: 62%;
     object-fit: cover;
+}
+
+.restaurant-card-offer-text{
+    position: absolute;
+    color: white;
+    text-transform: uppercase;
+    top:50%;
+    left:5%;
 }
 
 .restaurant-card-text > *{
